<resources>
    <string name="app_name">Afri Learn</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="course_title">Course Title</string>
    <string name="videos">Videos</string>
    <string name="coursework">Coursework</string>
    <string name="rename">Rename</string>
    <string name="name">Name</string>
    <string name="username">Username</string>
    <string name="userBio">sharedPreferenceBio</string>
    <string name="MULTIPLECHOICEQUESTION">multi</string>
    <string name="DOCUMENTQUESTION">doc</string>
    <string name="DIRECTQUESTION">direct</string>
    <string name="sign_up_as">Sign Up as:</string>
    <string name="student">student</string>
    <string name="teacher">teacher</string>
    <string name="app_logo">app logo</string>
    <string name="afri_learn">Afri-Learn</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="getting_started">Getting Started</string>
    <string name="free">Free</string>
    <string name="basic">Basic</string>
    <string name="premium">Premium</string>
    <string name="VERIFIED">VERIFIED</string>
    <string name="CHOSEN_PLAN">CHOSEN_PLAN</string>
    <string name="teacher_path">teacher</string>
    <string name="classes_path">classes</string>
    <string name="next">Next</string>
    <string name="upload">Upload</string>
    <string name="national_id">National ID</string>
    <string name="passport">Passport</string>
    <string name="drivers_permit">Drivers Permit</string>
    <string name="ID_PATH">id</string>
    <string name="VERIFICATION_PATH">verification_files</string>
    <string name="VERIFICATION_FILE_TYPE">verification_file_type</string>
    <string name="age">Age</string>
    <string name="_17"><![CDATA[< 17]]></string>
    <string name="_50"><![CDATA[> 50]]></string>
    <string name="education_basic_primary">Basic / Primary</string>
    <string name="education_secondary_high">Secondary / High</string>
    <string name="education_tertiary_college">Tertiary / College</string>
    <string name="education_beginner">Beginner</string>
    <string name="education_intermediate">Intermediate</string>
    <string name="education_advance">Advance</string>
    <string name="teacher_details">teacher_details</string>
    <string name="student_details">student_details</string>
    <string name="ALL_SHARED_PREFERENCES">ALL SHARED PREFERENCES</string>
    <string name="studentTeacherPreference">studentTeacher</string>
    <string name="INSTRUCTOR_DISPLAY_IMAGE">INSTRUCTOR_DISPLAY_IMAGE</string>
    <string name="IDENTIFICATION_IMAGE">IDENTIFICATION_IMAGE</string>
    <string name="CERTIFICATE_IMAGE">CERTIFICATE_IMAGE</string>
    <string name="instructor_details">instructor_details</string>
    <string name="userInfo">usersInfo</string>
    <string name="please_wait">Please wait...</string>
    <string name="course_path">course_path</string>
    <string name="course_codes">course_codes</string>
    <string name="uid">uid</string>
    <string name="manage_course_data_intent">manage_course_data_intent</string>
    <string name="course_plans">course_plans</string>
    <string name="pme_ref">plans_module_exercise</string>
    <string name="network_value">network_value</string>
    <string name="ver_id_text1">Complete your ID verification process below to start creating courses and schemes. You need to upload a copy of your ID (either of: National ID, Drivers Permit or Passport) to complete this step.</string>
    <string name="ver_id_step1_text">Please select a copy of your ID here. Accepted format are: .pdf, .docx, .docx, .jpeg and .png.</string>
    <string name="ver_certificate_text">Upload a certificate that relates to the the kind of courses you will instruct</string>
    <string name="ver_certificate_step2_text">Please select a copy of your teaching certificate here. Accepted format are: .pdf, .docx, .docx, .jpeg and .png.</string>
    <string name="SHOW_CREATE_COURSE_GUIDELINES">SHOW_CREATE_COURSE_GUIDELINES</string>
    <string name="Guidelines">Guidelines to create a course.\n1. Create a plan with the plan tool.\n2. Create modules in each plan.\n3. Add exercise where
        necessary\n4. Submit to create course.</string>
    <string name="SHOW_LONG_PRESS_INFO">SHOW_LONG_PRESS_INFO</string>
    <string name="plans_module_exercise">plans_module_exercise</string>

    <string-array name="gender_item">
        <item>Male</item>
        <item>Female</item>
    </string-array>
</resources>

