<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="#B4000000"
    android:paddingBottom="8dp"
    android:paddingHorizontal="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?background"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="12dp"
            android:padding="16sp"
            android:textColor="?android:textColorSecondary"
            android:text="Level / Difficulty"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="12dp"
            android:textColor="?android:textColorSecondary"
            android:text="School"
            android:textSize="16sp" />

        <LinearLayout
            android:id="@+id/dialog_education_basic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:foreground="@drawable/app50_ripple"
            android:orientation="horizontal"
            android:padding="12dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_circle" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="12dp"
                android:textColor="?android:textColorSecondary"
                android:text="@string/education_basic_primary"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/dialog_education_secondary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:foreground="@drawable/app50_ripple"
            android:orientation="horizontal"
            android:padding="12dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_circle" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="12dp"
                android:textColor="?android:textColorSecondary"
                android:text="@string/education_secondary_high"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/dialog_education_tertiary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:foreground="@drawable/app50_ripple"
            android:orientation="horizontal"
            android:padding="12dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_circle" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="12dp"
                android:textColor="?android:textColorSecondary"
                android:text="@string/education_tertiary_college"
                android:textSize="16sp" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="12dp"
            android:text="Non - School"
            android:textColor="?android:textColorSecondary"
            android:layout_marginTop="12dp"
            android:textSize="16sp" />

        <LinearLayout
            android:id="@+id/dialog_education_beginner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:foreground="@drawable/app50_ripple"
            android:orientation="horizontal"
            android:padding="12dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_circle" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="12dp"
                android:textColor="?android:textColorSecondary"
                android:text="@string/education_beginner"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/dialog_education_intermediate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:foreground="@drawable/app50_ripple"
            android:orientation="horizontal"
            android:padding="12dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_circle" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="12dp"
                android:text="@string/education_intermediate"
                android:textColor="?android:textColorSecondary"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/dialog_education_advance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:foreground="@drawable/app50_ripple"
            android:orientation="horizontal"
            android:padding="12dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_circle" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="12dp"
                android:textColor="?android:textColorSecondary"
                android:text="@string/education_advance"
                android:textSize="16sp" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>