<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".student_package.videos.StudentCourseWork">

    <ListView
        android:id="@+id/StudentCourseWorks"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/StudentContentW" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/StudentContentW"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="50dp"
        android:background="#3F51B5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/StudentCourse"
        app:tabIndicatorGravity="stretch"
        app:tabIndicatorHeight="5dp"
        app:tabTextColor="#2196F3">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/student_course_videos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/videos" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/student_coursework"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/coursework" />

    </com.google.android.material.tabs.TabLayout>

    <LinearLayout
        android:id="@+id/StudentCourse"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="50dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/courseTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|center_horizontal|center_vertical"
            android:layout_marginTop="10dp"
            android:fontFamily="sans-serif-black"
            android:lineSpacingExtra="20sp"
            android:text="@string/course_title"
            android:textAlignment="center"
            android:textColor="#3F51B5"
            android:textSize="16sp"
            android:textStyle="bold"
            android:typeface="sans" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>